loaded dots for stations

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 <body>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
     <p>This is an interactive graph of bike traffic throughout the day in Boston.</p>
-    <div id="map"></div>
+    <div id="map">
+        <svg>
+        </svg>
+    </div>
     <!-- Mapbox GL JS JavaScript -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+    <!-- Load D3.js from CDN -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Load your custom map initialization script -->
     <script src="map.js"></script>
 </body>
